# app/Http/Controllers/CategoryController.php
@@ -97,13 +97,51 @@ class CategoryController extends Controller
         //
     }
 
-    // /**
-    //  * Display the specified resource.
-    //  */
-    // public function show(Category $category)
-    // {
-    //     //
-    // }
+    /**
+     * Display the specified resource.
+     *
+     * @OA\Get(
+     *     path="/api/v1/category/{uuid}",
+     *     tags={"Categories"},
+     *     summary="Fetch a category",
+     *     description="Categories API endpoint",
+     *     operationId="category.show",
+     *     @OA\Parameter(
+     *         name="uuid",
+     *         in="path",
+     *         description="",
+     *         required=true,
+     *         @OA\Schema(
+     *             default="",
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="ok",
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Page not found"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Entity"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     ),
+     * )
+     */
+    public function show($uuid)
+    {
+        return parent::show($uuid);
+    }
 
     /**
      * Update the specified resource in storage.
